--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body{
     
 
 
-    background-image: url(../Telas-de-login/img/1174481.png);
+    background-image: url(./img/1174481.png);
     background-repeat: no-repeat;
     background-size: 50%;
     
